--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/rekon/public_html/
+    - export DEPLOYPATH=/home/rekon/
     - /bin/cp -a * $DEPLOYPATH
